# GraphMatching

./: .README.md.kate-swp  .gitignore  CMakeLists.txt  GraphMatching.kdev4  LICENSE  README.md  TestPreferenceList.cc  main.cc
.kdev4/: GraphMatching.kdev4
include/: BipartiteGraph.h  CriticalRSM.h  EnvyfreeHRLQ.h  GraphReader.h  HHeuristicHRLQ.h  HeuristicHRLQ.h  HospitalResidents.h  Matching.h  MatchingAlgorithm.h  MaxCardPopular.h  MaximalEnvyfreeHRLQ.h  NProposingMatching.h  NProposingTiesMatching.h  Partner.h  PartnerList.h  Popular.h  PopularAmongMaxCard.h  PopularMatching.h  PopularMatching2Sided.h  PreferenceList.h  RHeuristicHRLQ.h  SReduction.h  StableMarriage.h  TDefs.h  Utils.h  Vertex.h  VertexBookkeeping.h  YokoiEnvyfreeHRLQ.h
lib/: .directory  BipartiteGraph.cc  CMakeLists.txt  CriticalRSM.cc  EnvyfreeHRLQ.cc  GraphReader.cc  HHeuristicHRLQ.cc  HeuristicHRLQ.cc  HospitalResidents.cc  Matching.cc  MatchingAlgorithm.cc  MaxCardPopular.cc  MaximalEnvyfreeHRLQ.cc  NProposingMatching.cc  Partner.cc  PartnerList.cc  Popular.cc  PopularAmongMaxCard.cc  PopularMatching.cc  PopularMatching2Sided.cc  PreferenceList.cc  RHeuristicHRLQ.cc  SReduction.cc  StableMarriage.cc  Utils.cc  Vertex.cc  YokoiEnvyfreeHRLQ.cc
resources/: P_mat_level_up.txt  brandl_kavitha_2019_fig1.txt  critical_rsm.txt  diff_stable_diff_pop1.txt  hrlq_m6.txt  many_many_popular_lq_fig1.txt  many_many_promotion.txt  output.txt  ties_input.txt  weak_stable.txt  yokoi_and_max_envy.txt  yokoi_diff_R_H.txt
resources/parser/: duplicate_partition_A.txt  duplicate_partition_B.txt  duplicate_preflists_A.txt  duplicate_preflists_B.txt  missing_partition_A.txt  missing_partition_B.txt  missing_pref_partition_A.txt  missing_pref_partition_B.txt  missing_preflists_A.txt  missing_preflists_B.txt
resources/sea-2018/: E_figure1.txt  envyfree.sh  figure1.txt
test/: CMakeLists.txt  TestDefs.cc  TestDefs.h  TestFavouriteNeighbour.cc  TestHR.cc  TestMaximalEnvyfreeHRLQ.cc  TestParser.cc  TestPartnerList.cc  TestPopular.cc  TestPreferenceList.cc  TestPrefers.cc  TestRSM.cc  TestRunner.cc  TestStableMarriage.cc  TestTies.cc  TestUtils.cc  TestVerifyRSM.cc  TestWeakStable.cc  TestYokoi.cc
tests/: 2pop_matchings.txt  example_paper.txt  max_mat_not_all_popular.txt  mp_lq.txt
tests/sea-2018/: M_figure1.txt  Y_figure1.txt
